--- a/.github/workflows/update-stocks.yml
+++ b/.github/workflows/update-stocks.yml
@@ -3,8 +3,8 @@ name: Update Prices
 
 on:
   schedule:
-    # Run once daily at 7 AM MYT (utc +8) (adjust the hour if you need a different timezone)
-    - cron: '0 15 * * *'
+    # Run once daily at 7 AM  (adjust the hour if you need a different timezone)
+    - cron: '0 7 * * *'
   # Allow manual triggers for testing
   workflow_dispatch:
 
